--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/lasagna.html">Lasagna</a>
+        <ul>
+            <li><a href="recipes/lasagna.html">Lasagna</a></li>
+            <li><a href="recipes/Ramen.html">Ramen</a></li>
+            <li><a href="recipes/Pho.html">Phở</a></li>
+        </ul>
+      
         <script src="" async defer></script>
     </body>
 </html>
